validation username obigatoire

--- a/app/views/map/created.html.erb
+++ b/app/views/map/created.html.erb
@@ -14,6 +14,7 @@
             <p>Adresse : <%= fiche.address %> </p>
             <p>Description : <%= fiche.description %> </p>
             <p>Supprimer cette boutique:  <%= link_to 'ici', '/place/' + fiche.id.to_s , method: :delete, data: {confirm: 'Tu es sûr.e ?'} %> </p>
+            <p>Modifier cette boutique: 
 
         </div>
       <%end%>
@@ -22,4 +23,3 @@
   </div>
     
 </div>
-'/created',
