--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -10,7 +10,7 @@ getLocation = (position) => {
   let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
   marker.addTo(mymap);
 }
-let errorHandler = () => {
+errorHandler = () => {
   alert('Position non activée, redirection sur Paris');
 }
 
