--- a/app/views/layouts/_settingsMenu.html.erb
+++ b/app/views/layouts/_settingsMenu.html.erb
@@ -1,12 +1,19 @@
+<!-- COMMUNAUTE -->
 <div class="user-menu" id="settings-user" style="display:none" >
 <%= render 'layouts/closecross'%>
-        <h2 style="text-align:center;font-size:60px; float: none;margin-right:0%;margin-bottom:-10px;"><i class="fa fa-cog"></i></h2>
-        
+        <%=image_tag("photos/purple(1).jpg", class: "profile-pic")%>   
+    <% if user_signed_in? %>
+      <h2 style = "text-align:center"><i>Salut <%= current_user.username.capitalize%> !</i></h2>
+      <%else%>
+       <h2><i>Bienvenue</i></h2>
+    <%end%>
+   
     
 
-     <a>Settings 1</a>
+      <%= link_to list_path do%> TOUTES LES BOUTIQUES <%end%> 
       <hr class="style13">
-      <a>Settings 2</a>
+      <%= link_to created_path do%> MES AMI(E)S <%end%> 
+     <!-- > <%= link_to edit_user_registration_path do%> ÉDITER MON PROFIL <%end%> -->
       <hr class="style13">
       
       
