--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -42,7 +42,7 @@
     i{
       float:right;
       padding:6px;
-      color:rgb(156, 13, 13);
+      color:grey;
       font-size:35px;
       padding-right:10px;
     }
