creation controller pages

--- a/app/views/pages/created.html.erb
+++ b/app/views/pages/created.html.erb
@@ -11,7 +11,7 @@
     
     <% current_user.places.reverse_each do |fiche| %>
         <div id="list_show">
-          <i class="fa fa-location-arrow"></i>
+          <i class="fa fa-bookmark"></i>
             <h3><%= fiche.name %> </h3>
             <hr>
             <p>Adresse : <%= fiche.address %> </p>
