--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -40,7 +40,8 @@
     margin-top: 50px;
     width: 40%;
     margin-left: 30%;
-    height: 80%;
+    height: 100%;
+    overflow: scroll;
     h2{
         margin-bottom: -10px;
     }
