ajout de responsive clavier

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -40,6 +40,7 @@
     margin-top: 50px;
     width: 40%;
     margin-left: 30%;
+    height : 90%;
     overflow: scroll;
     h2{
         margin-bottom: -10px;
@@ -59,6 +60,9 @@
         padding-bottom: 20px!important;
         margin-left: 3%;
         width: 95%;
+        height : 85%;
+        margin-top: 10px;
+
     }
 
         
