icon connexion modified

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
     <% if user_signed_in? %>
     <li><a onclick="toggleUserMenu()">PARAMÈTRES <i class="fa fa-cog"></i></a>
     <%else%>
-    <li><a onclick="toggleUserMenu()">CONNEXION <i class="fa fa-cog"></i></a>
+    <li><a onclick="toggleUserMenu()">CONNEXION <i class="fa fa-sign-in"></i></a>
   <%end%>
 </div>
 
