--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -1,7 +1,12 @@
 <!-- PARAMETRES-->
 <div class="user-menu" id="menu-user" style="display:none" >
-<%= render 'layouts/closecross'%>    
+<%= render 'layouts/closecross'%> 
+
+ <% if user_signed_in? %>
         <h2 style="text-align:center;font-size:60px; float: none;margin-right:0%;margin-bottom:-10px;"><i class="fa fa-cog"></i></h2>
+    <%else%>
+        <h2 style="text-align:center;font-size:60px; float: none;margin-right:0%;margin-bottom:-10px;"><i class="fa fa-sign-in"></i></h2>
+  <%end%>
 
     <br><br> <br>
     <% if user_signed_in? %>
