--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -18,10 +18,11 @@
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Je n'ai pas reçu d'instructions...", new_unlock_path(resource_name) %><br />
 <% end -%>
-
+<!--FACEBOOK 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Se connecter avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+      <%= link_to "Se connecter avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+      <%= link_to omniauth_authorize_path(resource_name, provider) do%><button class="connect">Se connecter avec Facebook</button> <%end%><br />
   <% end -%>
 
-<% end -%>
+<% end -%> -->
