--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -88,7 +88,7 @@ $main-color-opacity:rgba(102, 51, 153,0.8);
         display:inline-block;
         color: #f2f2f2;
         text-align: center;
-        padding: 13px 17px;
+        padding: 12px;
         text-decoration: none;
         font-size: 20px;
 
