--- a/app/assets/stylesheets/admin_page.scss
+++ b/app/assets/stylesheets/admin_page.scss
@@ -35,12 +35,25 @@
 /************** SHOP TAB  ****************/
 /*****************************************/
 .wrap-shop-admin{
-    width:100%;
-    padding:5px;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.45);
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.45);
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.45);
+
 }
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
     background-color: white;
