--- a/app/assets/stylesheets/admin_page.scss
+++ b/app/assets/stylesheets/admin_page.scss
@@ -32,13 +32,10 @@
     height: 100%;
 }
 /*****************************************/
-/************** SHOP TAB  ****************/
+/************** ACCORDEON  ****************/
 /*****************************************/
-.wrap-shop-admin{
 
-}
 .accordion {
-    background-color: #eee;
     color: #444;
     cursor: pointer;
     padding: 18px;
@@ -46,17 +43,32 @@
     border: none;
     outline: none;
     transition: 0.4s;
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.53);
+    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.53);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.53);
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: white;
 }
 
 /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: rgba(206, 194, 194, 0.247);
     display: none;
     overflow: hidden;
+}
+/*****************************************/
+/************** MISC  ****************/
+/*****************************************/
+.isadmin{
+    float: right;
+    font-size: 12px;
+    top: 3px;
+    color: green;
+    border: 1px solid green;
+    padding: 3px;
+    border-radius: 3px;
 }
