--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -1,7 +1,14 @@
 <!-- PARAMETRES-->
 <div class="user-menu" id="menu-user" style="display:none" >
 <%= render 'layouts/closecross'%>    
-        <h2 style="text-align:center;font-size:60px; float: none;margin-right:0%;margin-bottom:-10px;"><i class="fa fa-cog"></i></h2>
+        <h2 style="text-align:center;font-size:60px; float: none;margin-right:0%;margin-bottom:-10px;">
+        <% if user_signed_in? %>
+        <i class="fa fa-cog"></i>
+        <%else%>
+        <i class="fa fa-sign-in"></i>
+        <%end%>
+
+        </h2>
 
     <br><br> <br>
     <% if user_signed_in? %>
