--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -23,10 +23,10 @@
           <%= link_to('CONNEXION AVEC FACEBOOK', user_facebook_omniauth_authorize_path)  %>  
         <hr class="style13">
       
-       <%= link_to('CONNEXION AVEC FACEBOOK 2', user_facebook_omniauth_callback_path)  %>  
+       <%= link_to('CONNEXION AVEC FACEBOOK 2', user_facebook_omniauth_authorize_path(:facebook))  %>  
         <hr class="style13">
 
-        
+    
       <%= link_to new_user_registration_path do%> M'INSCRIRE <%end%> 
         <hr class="style13">
     <% end %>
