--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -120,6 +120,67 @@ input[type=submit] {
     }
 }
 
+/* Boutons modifier  */
+.button-orange {
+color: #fef4e9;
+border: solid 1px #da7c0c;
+background: -moz-linear-gradient(top, #faa51a, #f47a20);display: inline-block;
+vertical-align: baseline;
+margin: 0 2px;
+outline: none;
+cursor: pointer;
+text-align: center;
+text-decoration: none;
+font: 14px/100% Arial, Helvetica, sans-serif;
+padding: .5em 2em .55em;
+text-shadow: 0 1px 1px rgba(0,0,0,.3);border-radius: .5em;box-shadow: 0 1px 2px rgba(0,0,0,.2);
+}
+
+.button-orange:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+/* Boutons supprimer  */
+.button-red {
+    color: #faddde;
+    border: solid 1px #980c10;
+    background: -moz-linear-gradient(top, #ed1c24, #aa1317);display: inline-block;
+    vertical-align: baseline;
+    margin: 0 2px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font: 14px/100% Arial, Helvetica, sans-serif;
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px rgba(0,0,0,.3);border-radius: .5em;box-shadow: 0 1px 2px rgba(0,0,0,.2);
+}
+
+.button-red:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+/* Bouton ajouter boutique */
+.button-green {
+    color: #e8f0de;
+    border: solid 1px #538312;
+    background: -moz-linear-gradient(top, #7db72f, #4e7d0e);display: inline-block;
+    vertical-align: baseline;
+    margin: 0 2px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font: 14px/100% Arial, Helvetica, sans-serif;
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px rgba(0,0,0,.3);
+    border-radius: .5em;box-shadow: 0 1px 2px rgba(0,0,0,.2);
+}
+
+.button-green:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 /* Boutons annuler / ajouter */
 .add_delete_div{
     margin-top:80px;
