--- a/app/views/pages/created.html.erb
+++ b/app/views/pages/created.html.erb
@@ -12,7 +12,7 @@
         <div id="list_show">
           <i class="fa fa-location-arrow"></i>
             <h3>Vous avez 0 boutique enregistrée :( <br><br>
-            <%= link_to 'Ajouter une boutique', '/', class: "btn btn-success" %> </h3>
+            <%= link_to 'Ajouter une boutique', '/', class: "button-green" %> </h3>
             <br>
 
         </div>
@@ -32,8 +32,8 @@
             <h3><%= fiche.name %> </h3>
             <hr>
             <p>Adresse : <%= fiche.address %> </p>
-            <p><%= link_to 'Modifier', edit_path, class: "btn btn-warning" %> 
-            <%= link_to 'Supprimer', '/place/' + fiche.id.to_s,  method: :delete, class: "btn btn-danger", data: {confirm: 'Tu es sûr.e ?'} %> </p>
+            <p><%= link_to 'Modifier', edit_path, class: "button-orange"%>
+              <%= link_to 'Supprimer', '/place/' + fiche.id.to_s,  method: :delete, class: "button-red", data: {confirm: 'Tu es sûr.e ?'} %> </p>
 
         </div>
       <%end%>
