--- a/app/assets/stylesheets/admin_page.scss
+++ b/app/assets/stylesheets/admin_page.scss
@@ -72,3 +72,12 @@
     padding: 3px;
     border-radius: 3px;
 }
+.isntadmin{
+    float: right;
+    font-size: 12px;
+    top: 3px;
+    color: red;
+    border: 1px solid red;
+    padding: 3px;
+    border-radius: 3px;
+}
