--- a/app/assets/stylesheets/admin_page.scss
+++ b/app/assets/stylesheets/admin_page.scss
@@ -71,6 +71,7 @@
     border: 1px solid green;
     padding: 3px;
     border-radius: 3px;
+    background-color: white;
 }
 .isntadmin{
     float: right;
@@ -80,4 +81,6 @@
     border: 1px solid red;
     padding: 3px;
     border-radius: 3px;
+    background-color: white;
+
 }
