--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/navbar'%>
 
-
+<div class="wrap-admin">
     <button class="tablink" onclick="openPage('Users', this, '#686de0','white','3px solid #474787')" id="defaultOpen">Utilisateurs <br><i class="fa fa-user"></i></button>
     <button class="tablink" onclick="openPage('Shops', this, '#6ab04c','white','3px solid #218c74')" >Boutiques <br><i class="fa fa-flag"></i></i></button>
     <button class="tablink" onclick="openPage('Admins', this, '#f0932b','white','3px solid #cd6133')">Admins<br> <i class="fa fa-bug"></i></button>
@@ -24,7 +24,7 @@
                     <% if user.try(:admin?) %>
                         <a>Admin <i class="fa fa-minus-circle"></i></a>
                     <%else%>
-                        <%= link_to '/pages/' + user.id.to_s , method: :delete, data: { confirm: "Supprimer le profil ? Action irréversible !" } do%>Supprimer : <i class="fa fa-trash"></i> <%end%>
+                        <%= link_to '/pages/' + user.id.to_s , method: :delete, data: { confirm: "Supprimer le profil ? Action irréversible !" } do%><i class="fa fa-trash"></i> <%end%>
                      
                      <%end%>
                 </div>
@@ -43,6 +43,8 @@
                 <div class="panel" >
                     <p><%=shop.address%></p>
                     <p>Proposé par : <%= shop.creator.username %></p>
+                    <%= link_to '/place/' + shop.id.to_s,  method: :delete, data: {confirm: 'Tu es sûr.e ?'} do %> <i class="fa fa-trash"></i><%end%></p>
+
                 </div>
                 
             </div>
@@ -66,7 +68,7 @@
         <%end%>
         <% end %>
     </div>
-
+</div>
 
 <script>
 
