--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -10,8 +10,7 @@
       MISE DE COTE AU CAS OU DE BESOIN D'AJOUT DESCRIPTION
       -->
       Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
-      <%= submit_tag"Ajouter", :class => "add_places", :id => "add", :style => "width:30%;" %><button class="imhere"><i class="fa fa-crosshairs"></i></button>
-
+      <%= submit_tag"Ajouter", :class => "add_places", :id => "add", :style => "width:30%;" %>
   </div>
 </div>
 
