--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,15 @@
   <body>
 
     <%= yield %>
-
+<% if notice %>
+		<div id="notice_wrapper">
+			<p id="notice"><%= notice %></p>
+		</div>
+	<% elsif alert %>
+		<div id="alert_wrapper">
+			<p id="alert"><%= alert %></p>
+		</div>
+	<%end%>
   <%= render 'layouts/userMenu' %>
   <%= render 'layouts/settingsMenu' %>
   </body>
