--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -5,6 +5,15 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to new_registration_path(resource_name) do%><button class="connect">S'inscrire</button><%end%><br />
 <% end -%>
+<br>
+<!--FACEBOOK -->
+<%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+    <!-- >  <%= link_to "Se connecter avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %> -->
+      <br>
+      <%= link_to omniauth_authorize_path(resource_name, provider) do%><button class="connect">Se connecter avec Facebook</button> <%end%><br />
+  <% end -%>
+
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <br><%= link_to "Mot de passe oublié ?", new_password_path(resource_name) %><br />
@@ -18,11 +27,5 @@
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Je n'ai pas reçu d'instructions...", new_unlock_path(resource_name) %><br />
 <% end -%>
-<!--FACEBOOK 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-      <%= link_to "Se connecter avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-      <%= link_to omniauth_authorize_path(resource_name, provider) do%><button class="connect">Se connecter avec Facebook</button> <%end%><br />
-  <% end -%>
 
-<% end -%> -->
+<% end -%> 
