--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -20,10 +20,10 @@
     <% else %>
       <%= link_to('ME CONNECTER', new_user_session_path)  %>  
         <hr class="style13">
-          <%= link_to('CONNEXION AVEC FACEBOOK', user_facebook_omniauth_authorize_path)  %>  
+          <%= link_to('Inscription AVEC FACEBOOK', user_facebook_omniauth_authorize_path)  %>  
         <hr class="style13">
       
-       <%= link_to('CONNEXION AVEC FACEBOOK 2', user_facebook_omniauth_authorize_path(:facebook))  %>  
+       <%= link_to('CONNEXION AVEC FACEBOOK', user_facebook_omniauth_callback_path, method: :facebook)  %>  
         <hr class="style13">
 
     
