CSS bouton modif/suppr/ajoute

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  */
  $main-color:rgba(102, 51, 153,1);
 
-body, html{
+body, html, .button-green{
     margin:0;
     height: 100%;
     font-family: Lato-light;
