--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -8,8 +8,7 @@
   <%= form_for(:address, placeholder: "Saisir l\'adresse")do |f| %> 
       <%= f.label :Adresse, placeholder: "Saisir l\'adresse" %>
       <%= f.text_field :Adresse %>
-
-      <%= f.submit "Mettre à jour ma boutique" %>
-
+<%= submit_tag"Mettre à jour", :class => "add_places", :id => "add", :style => "width:30%;" %>
+    <%= link_to "Retour", created_path, class: "button-back" %>
      <% end %>
 <%end%>
