--- a/app/assets/javascripts/place.js.erb
+++ b/app/assets/javascripts/place.js.erb
@@ -35,7 +35,7 @@ callUn = function() {
 		toggleModal();
 		$("#add").hide();
 		a = document.createElement("button");
-		$(a).addClass("add-position");
+		$(a).addClass("validate-position");
 		b = document.createElement("i");
 		$(b).appendTo($(a));
 		$(b).addClass("fa");
