--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -23,7 +23,8 @@
       <%= link_to('ME CONNECTER', new_user_session_path)  %>  
         <hr class="style13">
       <%= link_to new_user_registration_path do%> M'INSCRIRE <%end%> 
-        <hr class="style13">
+         <hr class="style13">
+        <!--<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>-->
     <% end %>
 
     </ul>
