--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -4,7 +4,7 @@
   <button class="add" onclick="toggleModal()"><i class="fa fa-plus"></i></button>
 <%end%>
 
-<%= render 'layouts/modale'%>
+<%= render 'modale'%>
 
 <div id='mapid'></div>
 
