--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -251,7 +251,7 @@ input[type=submit] {
     font-weight: lighter;
     border-radius: 4px;
     color: white;
-    background-color: red;
+    background-color: #2980b9;
     padding-top: 8px;
     padding-bottom: 8px;
     width: 30%;
