--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -15,6 +15,8 @@
                     <%else%>
                      <%= button_tag 'Non Admin', class:"isntadmin", onclick: "admin(#{user.id})", data: { confirm: "Accorder à #{user.username} le rôle d'administrateur ?" }%>
                      <%end%>
+                    <%= image_tag user.avatar %>
+
                 </h3>
                 <div class="panel" >
                     <p><u>E-mail : </u><%=user.email%></p>
