--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -44,7 +44,7 @@
                 <h3 class="accordion"> <%=shop.name%></h3>
                 <div class="panel" >
                     <p><%=shop.address%></p>
-                    <p>Proposé par : <%= shop.creators[0].username %></p>
+                    <!--<p>Proposé par : <%= shop.creators[0].username %></p>-->
                     <%= link_to '/place/' + shop.id.to_s,  method: :delete, data: {confirm: 'Tu es sûr.e ?'} do %> <i class="fa fa-trash"></i><%end%></p>
 
                 </div>
