--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -12,7 +12,7 @@
   #liste {
     position: fixed; 
     min-width: 100%; 
-    height:100%;
+    height:95%;
     overflow: scroll;
 
   }
@@ -62,10 +62,13 @@
   /* MEDIA QUERIES */
   /*******************************/
   @media screen and (min-width: 0px) and (max-width: 800px) {
-    #list { margin-top:-20px; }  
     .leaflet-top .leaflet-control {
       margin-top:40px!important;
     }
+    #liste{
+            height:90%;
+          }
+    
     #list_show{
       width:95%;
       margin-left:10px;
