--- a/app/views/layouts/_settingsMenu.html.erb
+++ b/app/views/layouts/_settingsMenu.html.erb
@@ -1,6 +1,7 @@
 <!-- COMMUNAUTE -->
 <div class="user-menu" id="settings-user" style="display:none" >
 <%= render 'layouts/closecross'%>
+<!-- Affichage de l'avatar uniquement si le user à un avatar -->
          <% if user_signed_in? && current_user.avatar.attached? %>
   
             <%= image_tag current_user.avatar, :style => "width:60%" %></div>
