--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,11 +1,11 @@
 <%= render 'layouts/navbar'%>
 
 <div class="wrap-admin">
-    
+<!-- Bouton haut du panel admin -->
     <button class="tablink" onclick="openPage('Users', this, '#686de0','white','3px solid #474787')" id="defaultOpen">Utilisateurs <br><i class="fa fa-user"></i></button>
     <button class="tablink" onclick="openPage('Shops', this, '#6ab04c','white','3px solid #218c74')" >Boutiques <br><i class="fa fa-flag"></i></i></button>
     <button class="tablink" onclick="openPage('Admins', this, '#f0932b','white','3px solid #cd6133')">Admins<br> <i class="fa fa-bug"></i></button>
-
+ <!-- Division d'affichage de tous les users avec possibilité de modifier le user vers admin-->   
     <div id="Users" class="tabcontent">
         <%@users.reverse.each do |user|%>
             <div class="wrap-shop-admin">
@@ -36,7 +36,7 @@
         <% end %>
         
     </div>
-
+<!-- Division affichage des boutiques, avec CRUD -->
     <div id="Shops" class="tabcontent">
         <%@places.reverse.each_with_index do |shop, index|%>
             <div class="wrap-shop-admin">
@@ -52,7 +52,7 @@
             <hr>
         <% end %>
     </div>
-
+<!-- Affichage des administrateurs du site -->
     <div id="Admins" class="tabcontent">
 
         <%@users.each do |user|%>
@@ -72,9 +72,9 @@
 </div>
 
 <script>
-
+//Définit le premier onglet ouvert
 document.getElementById("defaultOpen").click();
-
+// Affichage de l'accordeon
 var acc = document.getElementsByClassName("accordion");
 var i;
 for (i = 0; i < acc.length; i++) {
