Modification du css

--- a/app/assets/javascripts/place.js.erb
+++ b/app/assets/javascripts/place.js.erb
@@ -67,7 +67,7 @@ $(".EN ATTENTE").click(function() {
 
 $("#add").click(function () {
   if($("#address")[0].value === "" ) {
-    alert("champs address vide");
+    alert("Veuillez renseigner une adresse !");
     return (0);
   }
   callUn();
