--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,11 @@
   <% if user_signed_in? %>
    <li><a href="<%=created_path%>"><i class="fa fa-list"></i></a>
   <%end%>
-  <li><a onclick="toggleUserMenu()"><i class="fa fa-cog"></i></a>
+  <% if user_signed_in? %>
+    <li><a onclick="toggleUserMenu()"><i class="fa fa-cog"></i></a>
+    <%else%>
+    <li><a onclick="toggleUserMenu()"><i class="fa fa-sign-in"></i></a>
+  <%end%>
   <% if current_user.try(:admin?) %>
     <li><a href="<%= admin_path%>"><i class="fa fa-bug"></i></a>
   <%end%>
