--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -13,7 +13,7 @@
     position: fixed; 
     min-width: 100%; 
     height:95%;
-    overflow: scroll;
+    overflow: auto;
 
   }
   #liste .img-bg {
